--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ table, th, td {
 <body>
 
 <table style="width:100%;" cellpadding="5">
-<tr ><td colspan="9" bgcolor="#eee"><marquee>10th class Project made by tanay srivastava </marquee></td></tr>
+<tr ><td colspan="9" bgcolor="#eee"><marquee>10th class Project made by shivendra singh </marquee></td></tr>
 <tr width="100%" colspan="9">
 <th><h2><a href="index.html">Delhi Tourism</a></h2> </th>
  
